# qtilitools

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  COPYING  README.md
cmake/: QtilitoolsConfig.cmake.in
cmake/modules/: AppStream.cmake  QtAppResources.cmake  Translate.cmake  TranslateDesktop.pl
